--- a/foundation-essentials-5.5.3/css/foundation.css
+++ b/foundation-essentials-5.5.3/css/foundation.css
@@ -55,88 +55,7 @@ body {
   font-size: 100%;
 }
 html {
-background-color: #60822e;
-}
-
-body {
-  color: #222222;
-  cursor: auto;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  line-height: 1.5;
-  margin: 0;
-  padding: 0;
-  position: relative; }
-section {
-display: block;
-}
-.header {
-background-color: #fff;
-}
-.wrap-site {
- width: 100%;
-    padding: 0 auto;
-    box-shadow: 0 0 5px 0;
-    background-color: #eee;
-}
-a#contact-link {
-    display: block;
-    text-align: center;
-    margin: 60px auto 76px;
-    height: 48px;
-    width: 250px;
-    border-radius: 6px;
-    padding-top: 4px;
-    background-color: #608223;
-}
-a {
-line-height: inherit;
-}
-.slogan {
-text-align: center;
-}
-.row {
-line-height: 1.5em;
-}
-a:hover {
-  cursor: pointer; }
-
-img {
-  max-width: 100%;
-  height: auto;
-  -ms-interpolation-mode: bicubic; }
-.logo {
-    
-}
-
-.large-image { 
-    background: url(../images/sunset2_02.jpg) center;
-    background-size: cover;
-    height: 300px;
-    box-shadow: 0 0 3px 0;
-    margin-top: 2px;
-}
-.main-content {
-height: 500px;
-    padding-top: 20px;
-}
-.footer{
-padding-top: 20px;
-}
-li {
-    list-style: none;
-   display: inline;
-}
-
-#copyright p {
-font-size: 12px;
-}
-
-
-.row {
-    width: 100%;
-    text-align: center;
+background-color: #60822e;  
 }
 
 
@@ -1232,7 +1151,7 @@ button, .button {
   border-style: solid;
   border-width: 0;
   cursor: pointer;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  
   font-weight: normal;
   line-height: normal;
   margin: 0 0 1.25rem;
@@ -1242,14 +1161,15 @@ button, .button {
   display: inline-block;
   padding: 1rem 2rem 1.0625rem 2rem;
   font-size: 1rem;
-  background-color: #2ba6cb;
-  border-color: #2285a2;
-  color: #FFFFFF;
+  background-color: #fff;
+  border-color: black;
+  color: black;
   transition: background-color 300ms ease-out; }
+/*
   button:hover, button:focus, .button:hover, .button:focus {
-    background-color: #2285a2; }
+    background-color: #fff; }
   button:hover, button:focus, .button:hover, .button:focus {
-    color: #FFFFFF; }
+    color: #black; }
   button.secondary, .button.secondary {
     background-color: #e9e9e9;
     border-color: #bababa;
@@ -1395,6 +1315,7 @@ button, .button {
         color: #FFFFFF; }
       button.disabled.info:hover, button.disabled.info:focus, button[disabled].info:hover, button[disabled].info:focus, .button.disabled.info:hover, .button.disabled.info:focus, .button[disabled].info:hover, .button[disabled].info:focus {
         background-color: #a0d3e8; }
+*/
 
 button::-moz-focus-inner {
   border: 0;
