--- a/foundation-essentials-5.5.3/main.css
+++ b/foundation-essentials-5.5.3/main.css
@@ -21,12 +21,18 @@ background-color: #453f3f;
 h2 {
 font-family: 'Lato', sans-serif;
 /*    text-transform: uppercase;*/
+    padding-bottom: 10px;
 }
 p {
-    text-align: center;
+    text-align: justify;
 }
 
-
+/*
+.images {
+    margin-top: 50px;
+    margin-bottom: 10px;
+}
+*/
 
 
 body {
@@ -121,7 +127,9 @@ padding: 10px 0 40px 0;
     box-shadow: 0 0 3px 0;
 }
 
-
+.cost > p {
+text-align: center;
+}
 /*Footer Section*/
 .footer{
     padding: 30px 0 10px 0;
@@ -129,9 +137,12 @@ padding: 10px 0 40px 0;
     box-shadow: 0 0 3px 0;
 }
 
-
-.location, #copyright>p {
+.location > p{
+text-align: center;
+}
+ #copyright > p {
 font-size: 12px;
+    text-align: center;
 }
 
 @media screen and (max-width: 480px) {
@@ -141,5 +152,6 @@ font-size: 12px;
          
     }
 }
+
 
 
